# widget-place

./: .gitignore  README.md
backend/: Dockerfile  README.md  main.py  pyproject.toml
backend/db/: connection.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx
